[tool.poetry]
name = "ros_awsiot"
version = "0.1.0"
description = "This package provides bridge functionalities between ROS and AWS IoT"
authors = ["seiya0412 <seiya.shimizu@whill.inc>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
awsiotclient = "^0.1.1"

[tool.poetry.dev-dependencies]
pysen = {version = "^0.9.1", extras = ["lint"]}

[tool.pysen]
version = "0.9"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py36"
[[tool.pysen.lint.mypy_targets]]
  paths = ["./ros_awsiot_agent/src/ros_awsiot_agent"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
